--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-# ===== REQUIRED: set these to your own DBs =====
-PG_URI=postgresql+psycopg2://postgres:df7592365@localhost:5432/smart_old_age_home
-PG_SCHEMA=public
+PG_URI=postgresql+psycopg2://postgres:your_password@localhost:5432/gym_db
+PG_SCHEMA=gym_data
 
 MONGO_URI=mongodb://localhost:27017
-MONGO_DB=airQuality
+MONGO_DB=gym_telemetry
